deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-app
  name: awesome-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-app
  template:
    metadata:
      labels:
        app: awesome-app
    spec:
      containers:
      - image: ghcr.io/codayblue/kubernetes-workshop:latest
        imagePullPolicy: IfNotPresent
        name: app
        ports:
          - name: http
            containerPort: 80
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 1000m
            memory: 512Mi
