deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-app
  name: awesome-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: awesome-app
  type: ClusterIP
